 *   - ~ generic matching routine segfault (rev. 11_b4)
 *   - ~ Buffer overrun when referencing 'curtime' field (rev. 11_b5)
 *   - ~ Log lookups had broken matching (glutil-precheck) (rev. 11_b6)
 *   - % Accumulators processing grouped with general matching routines (had separate routine before) (rev. 11_b7)
 *   - + 'depth' field (FILESYSTEM), see DATA_STRUCTURES (rev. 11_b7)
 *
 * v2.3:
 *
 *   - + Started glutil-precheck, on MKDIR filtering processor, uses imdb/tvrage data logs.
 *   - + Add loc_dm.sh and loc_cl.sh
 *   - ~ Fix memory leak in file proc (-x)
 *   - ~ Clean up resources after done (-x)
 *   - ~ Filesystem parser ignored elements not of type DT_REG (regular file)
 *   - % Higher resolution (nanosecond) loop interval can be given to --loop
 *   - % Log import (-z) ignores # commented lines
 *   - + Add --xretry
 *   - % Changed default behaviour: dirlog rebuild imports files on requested depth level (rev. 8)
 *   - + Add --indepth - scans each import subject recursively (old behaviour) (rev. 8)
 *   - % Passing '-' as argument to --folders reads from stdin (rev. 8)
 *   - ~ Full filesystem rescan (dirlog rebuild) not recursing (rev. 8)
 *   - % Passing '-' as argument to path overrides reads from stdin (rev. 8)
 *   - ~ Full filesystem rescan (dirlog rebuild) not scanning files (rev. 9)
 *   - % Changed option name for full dirlog rebuild from '-f' to '--full' (rev. 10)
 *   - ~ Update in full dirlog rebuild mode fixed (rev. 10)
 *   - ! Large performance boost in dirlog update mode (rev. 10)
 *   - ~ Dirlog rebuild update mode broken (-r -u) (rev. 10) 
 *   - ~ Do not retry opening nukelog if it fails the first time (-r) (rev. 11)
 *   - ~ Filtering options broken when no log existed (-r) (rev. 11)
 *   - ~ Sparseness ({sparse}) was not calculated properly (rev. 12)
 *   - ~ Certain stages of SFV rebuild ignoring --nowrite (rev. 12)
 *   - + SUID/SGID/sticky bit octet support (rev. 13)
 *   - + Add 'pbits' (first 12 bits of st_mode) (rev. 13)